[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[packages]
python = "^3.7"
PyGithub = "1.53"
Django = "1.2.2"
djangorestframework = "==3.11.1"
urllib3 = "1.19"
bleach = "1.0.1"
Jinja2 = "2.10"
Sphinx = "1.2.1"
pytest = "==5.2"
PyYAML = "==5.3.1"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
